<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
    tools:context=".login_Activity"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="249dp"
        android:layout_height="229dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="4dp"
        app:srcCompat="@mipmap/decoration2" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="315dp"
        android:layout_height="193dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="130dp"
        app:srcCompat="@mipmap/decoration1" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="173dp"
        android:text="................................."
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="129dp"
        android:text="................................."
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />


    <LinearLayout
        android:layout_height="329dp"
        android:layout_width="match_parent"
        android:layout_marginTop="284dp"
        android:orientation="vertical"
        android:layout_alignTop="@+id/imageView12">

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:textColorHint="@android:color/background_light" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PASSWORD"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/RmbMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/RegisterHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Register"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Forget"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            tools:text="@string/Forget" />

    </LinearLayout>

</RelativeLayout>