<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="303dp"
            android:background="@drawable/circle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text=". . . . . . . . . . . . . . . . . . . . . . . . . . "
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@mipmap/logo" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text=". . . . . . . . . . . . . . . . . . . . . . . . . . "
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="429dp"
                android:layout_height="42dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/Location"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Location"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/location"
                    android:layout_width="207dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:entries="@array/Number"
                    android:foregroundGravity="center|fill_vertical"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="675dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="    Rooms        :"
                    android:textColor="@android:color/background_light" />

                <Spinner
                    android:id="@+id/rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:entries="@array/Number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="429dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/From"
                    android:layout_width="184dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:editable="false"
                    android:gravity="center"
                    android:hint="@string/Check_in_Date"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textSize="14sp"
                    tools:ignore="Deprecated" />

                <EditText
                    android:id="@+id/To"
                    android:layout_width="232dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:editable="false"
                    android:hint="@string/Check_out_Date"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textSize="14sp"
                    tools:ignore="Deprecated" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/listViw"
            android:layout_width="match_parent"
            android:layout_height="342dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Follow Us :"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/facebook" />

            <ImageView
                android:id="@+id/instragram"
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/instragram" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Most People"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_person" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="478dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Almost Arrival Bill"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>